--- a/main/static/main/css/shop/style.scss
+++ b/main/static/main/css/shop/style.scss
@@ -179,6 +179,99 @@ main {
       } 
     
     }
+
+    .main__filter_box-div {
+      display: flex;
+
+      .customCheckBoxHolder {
+        margin: 5px;
+        display: flex;
+      }
+      .customCheckBox {
+        width: fit-content;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        user-select: none;
+        padding: 2px 8px;
+        background-color: rgb(235, 47, 47);
+        border-radius: 0px;
+        color: white;
+        transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+        transition-duration: 300ms;
+        transition-property: color, background-color, box-shadow;
+        display: flex;
+        height: 32px;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px 1px 1px 0px;
+        outline: none;
+        justify-content: center;
+        min-width: 55px;
+
+        &:hover {
+          background-color: rgb(255, 34, 34);
+          color: white;
+          box-shadow: rgba(0, 0, 0, 0.23) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.17) 0px 2px 4px 1px;
+          .inner {
+            transform: translateY(-2px);
+          }
+        }
+        .inner {
+          font-size: 18px;
+          font-weight: 900;
+          pointer-events: none;
+          transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+          transition-duration: 300ms;
+          transition-property: transform;
+          transform: translateY(0px);
+        }
+      }
+      .customCheckBoxWrapper {
+        &:first-of-type {
+          .customCheckBox {
+            border-bottom-left-radius: 5px;
+            border-top-left-radius: 5px;
+            border-right: 0px;
+          }
+        }
+        &:last-of-type {
+          .customCheckBox {
+            border-bottom-right-radius: 5px;
+            border-top-right-radius: 5px;
+            border-left: 0px;
+          }
+        }
+        .customCheckBox {
+          &:hover {
+            .inner {
+              transform: translateY(-2px);
+            }
+          }
+        }
+      }
+      .customCheckBoxInput {
+        display: none;
+        &:checked {
+          + {
+            .customCheckBoxWrapper {
+              .customCheckBox {
+                background-color: #2d6737;
+                color: white;
+                box-shadow: rgba(0, 0, 0, 0.23) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.17) 0px 2px 4px 1px;
+                .inner {
+                  transform: translateY(-2px);
+                }
+                &:hover {
+                  background-color: #34723f;
+                  box-shadow: rgba(0, 0, 0, 0.26) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.15) 0px 3px 6px 2px;
+                }
+              }
+            }
+          }
+        }
+      }
+      
+    }
   }
 
   .main__products_box {
@@ -343,18 +436,6 @@ main {
           }
         }
       }
-    }
-
-    
-    // .main__products_box-product_div {
-      // border: 1px solid red;
-      // 
-      // 
-    // }
+    }  
   }
-
-  
 }
-
-
-
