--- a/main/static/main/css/garage/style.scss
+++ b/main/static/main/css/garage/style.scss
@@ -112,6 +112,124 @@ header {
     }
 }
 
+.sell_menu {
+  width: 60%;
+  height: 60%;
+  border: 2px solid $bgc2;
+  background: $bgc3;
+  color: $text_color_1;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 2;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5rem;
+
+  display: none;
+
+  .sell_menu__form {
+    background-color: $bgc2;
+    box-shadow: 0 0 10px 5px $bgc;
+    width: 38%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+
+    .sell_menu__form-title {
+      font-size: 3.8rem;
+      margin-bottom: 1rem;
+    }
+
+    .sell_menu__form-car_name {
+      font-size: 3rem;
+      margin-bottom: 4rem;
+      color: $text_color_2;
+    }
+
+    .sell_menu__form-input {
+      width: 60%;
+      height: 4rem;
+      background-color: transparent;
+      border-radius: 10px;
+      border: 2px solid rgb(2, 117, 2);
+      transition: 0.2s;
+      outline: none;
+      color: white;
+      padding-left: 2rem;
+      text-align: center;
+      font-size: 1.8rem;
+      margin: 2rem 0;
+
+      &:focus {
+        border: 2px solid rgb(45, 191, 45);
+      }
+    }
+    
+    .sell_menu__form-label__input-checkbox{
+      appearance: none;
+      width: 20px;
+      height: 20px;
+      border: 2px solid #9d3ab1;
+      border-radius: 5px;
+      background-color: transparent;
+      display: inline-block;
+      position: relative;
+      margin-right: 10px;
+      cursor: pointer;
+
+      &:before {
+        content: "";
+        background-color: #b530d0;
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 10px;
+        height: 10px;
+        border-radius: 3px;
+        transition: all 0.1s ease-in-out;
+      }
+      &:checked {
+        &:before {
+          transform: translate(-50%, -50%) scale(1);
+        }
+      }
+    }
+
+    .sell_menu__form-label {
+      margin: 0 0 4rem 0;
+      font-size: 18px;
+      color: #fff;
+      cursor: pointer;
+      user-select: none;
+      display: flex;
+      align-items: center;
+    }
+
+    .sell_menu__form-submit_button {
+      width: 70%;
+      height: 4rem;
+      border-radius: 10px;
+      border: none;
+      background-color: rgb(47, 162, 47);
+      margin-top: 3rem;
+      transition: 0.2s;
+      font-size: 1.7rem;
+      font-weight: 600;
+      color: whitesmoke;
+      &:hover {
+        cursor: pointer;
+        background-color: rgb(78, 195, 78);
+      }
+    }
+    
+  }
+}
+
 main {
   height: 100%;
   grid-area: 2 / 1 / 6 / 6;
