--- a/main/static/main/css/shop/style.css
+++ b/main/static/main/css/shop/style.css
@@ -122,6 +122,66 @@ main {
         align-items: center; }
         main .main__filter_box .main__filter_box-form .main__filter_box-form__button:hover {
           background-color: #363638; }
+    main .main__filter_box .main__filter_box-div {
+      display: flex; }
+      main .main__filter_box .main__filter_box-div .customCheckBoxHolder {
+        margin: 5px;
+        display: flex; }
+      main .main__filter_box .main__filter_box-div .customCheckBox {
+        width: fit-content;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        user-select: none;
+        padding: 2px 8px;
+        background-color: #eb2f2f;
+        border-radius: 0px;
+        color: white;
+        transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+        transition-duration: 300ms;
+        transition-property: color, background-color, box-shadow;
+        display: flex;
+        height: 32px;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px 1px 1px 0px;
+        outline: none;
+        justify-content: center;
+        min-width: 55px; }
+        main .main__filter_box .main__filter_box-div .customCheckBox:hover {
+          background-color: #ff2222;
+          color: white;
+          box-shadow: rgba(0, 0, 0, 0.23) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.17) 0px 2px 4px 1px; }
+          main .main__filter_box .main__filter_box-div .customCheckBox:hover .inner {
+            transform: translateY(-2px); }
+        main .main__filter_box .main__filter_box-div .customCheckBox .inner {
+          font-size: 18px;
+          font-weight: 900;
+          pointer-events: none;
+          transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+          transition-duration: 300ms;
+          transition-property: transform;
+          transform: translateY(0px); }
+      main .main__filter_box .main__filter_box-div .customCheckBoxWrapper:first-of-type .customCheckBox {
+        border-bottom-left-radius: 5px;
+        border-top-left-radius: 5px;
+        border-right: 0px; }
+      main .main__filter_box .main__filter_box-div .customCheckBoxWrapper:last-of-type .customCheckBox {
+        border-bottom-right-radius: 5px;
+        border-top-right-radius: 5px;
+        border-left: 0px; }
+      main .main__filter_box .main__filter_box-div .customCheckBoxWrapper .customCheckBox:hover .inner {
+        transform: translateY(-2px); }
+      main .main__filter_box .main__filter_box-div .customCheckBoxInput {
+        display: none; }
+        main .main__filter_box .main__filter_box-div .customCheckBoxInput:checked + .customCheckBoxWrapper .customCheckBox {
+          background-color: #2d6737;
+          color: white;
+          box-shadow: rgba(0, 0, 0, 0.23) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.17) 0px 2px 4px 1px; }
+          main .main__filter_box .main__filter_box-div .customCheckBoxInput:checked + .customCheckBoxWrapper .customCheckBox .inner {
+            transform: translateY(-2px); }
+          main .main__filter_box .main__filter_box-div .customCheckBoxInput:checked + .customCheckBoxWrapper .customCheckBox:hover {
+            background-color: #34723f;
+            box-shadow: rgba(0, 0, 0, 0.26) 0px -4px 1px 0px inset, rgba(255, 255, 255, 0.17) 0px -1px 1px 0px, rgba(0, 0, 0, 0.15) 0px 3px 6px 2px; }
   main .main__products_box {
     height: 92%;
     overflow-x: hidden;
